--- a/Main/HTML/Alumnos/AlumnosAdmin.html
+++ b/Main/HTML/Alumnos/AlumnosAdmin.html
@@ -45,8 +45,7 @@
 											Alumnos
 											</a>
 											<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-											<a class="dropdown-item" href="../alumnos/ver-alumnos.html">Ver todos</a>
-											<a class="dropdown-item" href="../alumnos/resumen-alumnos.html">Ver resumen<span class="sr-only">(current)</span></a>
+											<a class="dropdown-item" href="#">Ver todos</a>
 											</div>
 									</li>
 									<li class="nav-item dropdown">
@@ -72,8 +71,8 @@
 											Rúbricas
 											</a>
 											<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-											<a class="dropdown-item" href="../rubricas/ver-rubricas.html">Ver todas</a>
-											<a class="dropdown-item" href="../rubricas/admin-rubricas.html">Administrar</a>
+											<a class="dropdown-item" href="../Rubricas/VerRubricaAdmin.html">Ver todas</a>
+											<a class="dropdown-item" href="../Rubricas/EditarRubricaAdmin.html">Administrar</a>
 											</div>
 									</li>
 									<li class="nav-item">
