--- a/Main/HTML/Alumnos/AlumnosEvaluador.html
+++ b/Main/HTML/Alumnos/AlumnosEvaluador.html
@@ -53,9 +53,8 @@
 							Alumnos
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../alumnos/ver-alumnos.html">Ver todos<span
+							<a class="dropdown-item" href="#">Ver todos<span
 									class="sr-only">(current)</span></a>
-							<a class="dropdown-item" href="../alumnos/resumen-alumnos.html">Ver resumen</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown">
@@ -84,8 +83,7 @@
 							Rúbricas
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../rubricas/ver-rubricas.html">Ver todas</a>
-							<a class="dropdown-item" href="../rubricas/admin-rubricas.html">Administrar</a>
+							<a class="dropdown-item" href="../Rubricas/VerRubricaEvaluador.html">Ver todas</a>
 						</div>
 					</li>
 					<li class="nav-item">
