--- a/Main/HTML/Rubricas/CrearRubricaAdmin.html
+++ b/Main/HTML/Rubricas/CrearRubricaAdmin.html
@@ -35,7 +35,7 @@
 			<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="../main.html">Inicio</a>
+						<a class="nav-link" href="#">Inicio</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -53,9 +53,7 @@
 							Alumnos
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../alumnos/ver-alumnos.html">Ver todos</a>
-							<a class="dropdown-item" href="../alumnos/resumen-alumnos.html">Ver resumen<span
-									class="sr-only">(current)</span></a>
+							<a class="dropdown-item" href="../alumnos/AlumnosAdmin.html">Ver todos</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown">
