--- a/Main/HTML/Rubricas/VerRubricaEvaluador.html
+++ b/Main/HTML/Rubricas/VerRubricaEvaluador.html
@@ -49,9 +49,7 @@
 							Alumnos
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../alumnos/ver-alumnos.html">Ver todos</a>
-							<a class="dropdown-item" href="../alumnos/resumen-alumnos.html">Ver resumen<span
-									class="sr-only">(current)</span></a>
+							<a class="dropdown-item" href="../alumnos/AlumnosEvaluador.html">Ver todos</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown">
