--- a/Main/HTML/Alumnos/AlumnosAdmin.html
+++ b/Main/HTML/Alumnos/AlumnosAdmin.html
@@ -163,7 +163,7 @@
 		  <td>Caro Ahumada</td>
 		  <td class = "centerTextTable">11</td>
 		  <td class = "centerTextTable">No</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr>
@@ -171,7 +171,7 @@
 		  <td>Urrutia Cifuentes</td>
 		  <td class = "centerTextTable">11</td>
 		  <td class = "centerTextTable">Sí</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr>
@@ -179,7 +179,7 @@
 		  <td>Cerda Riquelme</td>
 		  <td class = "centerTextTable">11</td>
 		  <td class = "centerTextTable">Sí</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr>
@@ -187,7 +187,7 @@
 		  <td>Chaperon Burgos</td>
 		  <td class = "centerTextTable">9</td>
 		  <td class = "centerTextTable">No</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr>
@@ -195,7 +195,7 @@
 		  <td>Paredes Fuentes</td>
 		  <td class = "centerTextTable">9</td>
 		  <td class = "centerTextTable">Sí</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr>
@@ -203,7 +203,7 @@
 		  <td>Días rivera</td>
 		  <td class = "centerTextTable">9</td>
 		  <td class = "centerTextTable">No</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr>
@@ -211,7 +211,7 @@
 		  <td>Barrientos Osorio</td>
 		  <td class = "centerTextTable">5</td>
 		  <td class = "centerTextTable">No</td>
-		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp; &emsp;<i class="fas fa-trash"></i></td>
+		  <td class = "centerTextTable"><i class="fas fa-pen"></i> &emsp;<i class="fas fa-trash"></i></td>
 		</tr>
 		
 		<tr >
