--- a/Main/HTML/Resumen/ResumenAdministrador.html
+++ b/Main/HTML/Resumen/ResumenAdministrador.html
@@ -93,16 +93,16 @@
         </div>
     </div>
 
-
-
-    <h1>Resumen de Evaluacion</h1>
-    <div class="row justify-content-md-center" style="margin: auto">
-            <div class="col-sm-10" style="padding: 1%;"></div>
-    </div>
     <div class="row justify-content-md-center" style="margin: auto">
             <div class="col-sm-10" style="padding: 1%;"></div>
     </div>
 
+    <div class="container">
+
+            <div class="row justify-content-md-center" style="margin: auto">
+                    <div class="col-sm-10" style="padding: 1%;"></div>
+                </div>
+            <h1>Resumen de Evaluacion</h1>
     <table class="table">
         <thead class="thead-dark">
             <tr>
@@ -119,6 +119,10 @@
             <tr>
                 <th scope="row">Codigo</th>
                 <td>CC4401</td>
+            </tr>
+            <tr>
+                    <th scope="row">Semestre</th>
+                    <td>Otoño</td>
             </tr>
 
             <tr>
@@ -158,12 +162,13 @@
 
         </tbody>
     </table>
-    
+</div>
 
     <div class="row justify-content-md-center" style="margin: auto">
             <div class="col-sm-10" style="padding: 1%;"></div>
     </div>
 
+    <div class="container">
     <table class="table">
         <thead class="thead-dark">
             <tr>
@@ -193,7 +198,7 @@
             </tr>
         </tbody> 
     </table>
-
+</div>
     <div class="row justify-content-md-center" style="margin: auto">
         <div class="col-sm-10" style="padding: 1%;"></div>    
     </div>
@@ -262,6 +267,8 @@
                 </tr>
     
             </table>
+
+        <p><b>Tiempo:</b></p>
         <table class="table">
                 <thead class="thead-dark">
                     <tr>
