Cambiado titular de la tabla.
Cambiado color de fondo a azul y texto a color blanco

--- a/Main/HTML/Alumnos/AlumnosEvaluador.html
+++ b/Main/HTML/Alumnos/AlumnosEvaluador.html
@@ -160,7 +160,7 @@
 	<div class="container table-responsive">
 		<table class="table table-bordered table-hover">
 
-			<tr>
+			<tr class="bg-primary text-white">
 				<th class="centerTextTable">Nombres</th>
 				<th class="centerTextTable">Apellidos</th>
 				<th class="centerTextTable">Grupo </th>
