Cambiado color de titular de las tablas

--- a/Main/HTML/Rubricas/VerRubricaAdmin.html
+++ b/Main/HTML/Rubricas/VerRubricaAdmin.html
@@ -146,13 +146,12 @@
 	<div class="container table-responsive">
 		<table class="table table-bordered table-hover">
 
-			<tr>
+			<tr class="bg-primary text-white">
 				<th class="centerTextTable">Puntajes</th>
 				<th class="centerTextTable">0.0</th>
 				<th class="centerTextTable">0.4</th>
 				<th class="centerTextTable">0.7</th>
 				<th class="centerTextTable">1.0</th>
-				<th class="centerTextTable"><i class="fas fa-plus-circle"></i></th>
 			</tr>
 
 			<tr>
@@ -207,10 +206,6 @@
 				<td class="centerTextTable">Se muestra algo negativo acerca de su entrega</td>
 				<td class="centerTextTable">Ocasionalmente habla en forma positiva</td>
 				<td class="centerTextTable">Habla en forma positiva durante casi toda la presentación</td>
-			</tr>
-
-			<tr>
-				<td class="centerTextTable"><i class="fas fa-plus-circle"></i></td>
 			</tr>
 
 		</table>
