--- a/Main/HTML/Rubricas/VerRubricaEvaluador.html
+++ b/Main/HTML/Rubricas/VerRubricaEvaluador.html
@@ -123,13 +123,12 @@
 	<div class="container table-responsive">
 		<table class="table table-bordered table-hover">
 
-			<tr>
+			<tr class="bg-primary text-white">
 				<th class="centerTextTable">Puntajes</th>
 				<th class="centerTextTable">0.0</th>
 				<th class="centerTextTable">0.4</th>
 				<th class="centerTextTable">0.7</th>
 				<th class="centerTextTable">1.0</th>
-				<th class="centerTextTable"><i class="fas fa-plus-circle"></i></th>
 			</tr>
 
 			<tr>
@@ -184,10 +183,6 @@
 				<td class="centerTextTable">Se muestra algo negativo acerca de su entrega</td>
 				<td class="centerTextTable">Ocasionalmente habla en forma positiva</td>
 				<td class="centerTextTable">Habla en forma positiva durante casi toda la presentación</td>
-			</tr>
-
-			<tr>
-				<td class="centerTextTable"><i class="fas fa-plus-circle"></i></td>
 			</tr>
 
 		</table>
