--- a/Main/HTML/Resumen/ResumenAdministrador.html
+++ b/Main/HTML/Resumen/ResumenAdministrador.html
@@ -104,8 +104,8 @@
                 </div>
             <h1>Resumen de Evaluacion</h1>
     <table class="table">
-        <thead class="thead-dark">
-            <tr>
+        <thead>
+            <tr class="bg-primary text-white">
                 <th scope="row">Resumen de Evaluacion</th>
                 <th scope="row">Datos</th>
             </tr>
@@ -170,8 +170,8 @@
 
     <div class="container">
     <table class="table">
-        <thead class="thead-dark">
-            <tr>
+        <thead class>
+            <tr class="bg-primary text-white">
                 <th scope="col">Grupo 3</th>
                 <th scope="col">Nombre</th>
             </tr>
@@ -204,7 +204,7 @@
     </div>
     <div class="container table-responsive">
             <table class="table table-bordered table-hover">
-                <tr>
+                <tr class="bg-primary text-white">
                     <th  scope="col">Puntajes</th>
                     <th  scope="col">0.0</th>
                     <th  scope="col">0.4</th>
@@ -268,10 +268,9 @@
     
             </table>
 
-        <p><b>Tiempo:</b></p>
         <table class="table">
-                <thead class="thead-dark">
-                    <tr>
+                <thead>
+                    <tr class="bg-primary text-white">
                         <th scope="col">Areas de Evaluacion</th>
                         <th scope="col">Maria Perez</th>
                         <th scope="col">Jose Manuel Lopez</th>
@@ -331,8 +330,8 @@
 
 
             <table class="table">
-                <thead class="thead-dark">
-                    <tr>
+                <thead>
+                    <tr class="bg-primary text-white">
                         <th scope="col">Evaluacion</th>
                         <th scope="col"></th>
                     </tr>
