--- a/Main/HTML/Resumen/ResumenAlumnos.html
+++ b/Main/HTML/Resumen/ResumenAlumnos.html
@@ -54,8 +54,8 @@
                     <div class="col-sm-10" style="padding: 1%;"></div>
                 </div>
         <table class="table">
-        <thead class="thead-dark">
-            <tr>
+        <thead>
+            <tr class="bg-primary text-white">
                 <th scope="row">Resumen</th>
                 <th scope="row">Datos</th>
             </tr>
@@ -120,8 +120,8 @@
 
     <div class="container">
     <table class="table">
-        <thead class="thead-dark">
-            <tr>
+        <thead>
+            <tr class="bg-primary text-white">
                 <th scope="col">Grupo 3</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Presenta</th>
@@ -160,7 +160,7 @@
     </div>
     <div class="container table-responsive">
         <table class="table table-bordered table-hover">
-            <tr>
+            <tr class="bg-primary text-white">
                 <th scope="col">Puntajes</th>
                 <th scope="col">0.0</th>
                 <th scope="col">0.4</th>
@@ -233,8 +233,8 @@
 
         </table>
         <table class="table">
-            <thead class="thead-dark">
-                <tr>
+            <thead>
+                <tr class="bg-primary text-white">
                     <th scope="col">Areas de Evaluacion</th>
                     <th scope="col">Puntaje 1</th>
                     <th scope="col">Puntaje 2</th>
@@ -302,8 +302,8 @@
 
 
         <table class="table">
-            <thead class="thead-dark">
-                <tr>
+            <thead>
+                <tr class="bg-primary text-white">
                     <th scope="col">Evaluacion</th>
                     <th scope="col"></th>
                 </tr>
