--- a/Main/HTML/Alumnos/AlumnosEvaluador.html
+++ b/Main/HTML/Alumnos/AlumnosEvaluador.html
@@ -20,81 +20,81 @@
 </head>
 
 <body>
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+		<a class="navbar-brand" href="../main.html">
+			fsociety
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="../main.html">Inicio</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Secciones
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
+						<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown active">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Alumnos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Ver todos<span class="sr-only">(current)</span></a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Grupos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
+						<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Evaluadores
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
+						<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Rúbricas
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../Rubricas/VerRubricaEvaluador.html">Ver todas</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
 	<!-- AQUI HAY UN PSEUDO FORMULARIO PARA SABER DE DONDE CARGAR LOS DATOS  -->
 	<div class="container">
-
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
-			<a class="navbar-brand" href="../main.html">
-				fsociety
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="../main.html">Inicio</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Secciones
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
-							<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Alumnos
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Ver todos<span
-									class="sr-only">(current)</span></a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Grupos
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
-							<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Evaluadores
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
-							<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Rúbricas
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../Rubricas/VerRubricaEvaluador.html">Ver todas</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
 		<br>
 
 		<form>
