--- a/Main/HTML/Rubricas/VerRubricaAdmin.html
+++ b/Main/HTML/Rubricas/VerRubricaAdmin.html
@@ -18,80 +18,79 @@
 
 <body>
 
-	<div class="container">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
-			<a class="navbar-brand" href="../main.html">
-				fsociety
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="../main.html">Inicio</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Secciones
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
-							<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Alumnos
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../alumnos/AlumnosAdmin.html">Ver todos</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Grupos
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
-							<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Evaluadores
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
-							<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Rúbricas
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="./VerRubricaAdmin.html">Ver todas</a>
-							<a class="dropdown-item" href="./EditarRubricaAdmin.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+		<a class="navbar-brand" href="../main.html">
+			fsociety
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="../main.html">Inicio</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Secciones
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
+						<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown active">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Alumnos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../alumnos/AlumnosAdmin.html">Ver todos</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Grupos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
+						<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Evaluadores
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
+						<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Rúbricas
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="./VerRubricaAdmin.html">Ver todas</a>
+						<a class="dropdown-item" href="./EditarRubricaAdmin.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
 
 
 	<br>
@@ -166,8 +165,10 @@
 				<td class="centerTextTable">Calidad del material</td>
 				<td class="centerTextTable">Presentación con muchos errores ortográficos, todas las imágenes son de baja
 					resolución</td>
-				<td class="centerTextTable">Algunos errores ortográficos, casi todas las imágenes son de baja resolución</td>
-				<td class="centerTextTable">Pocos errores ortográficos, solo algunas imágenes son de baja resolución</td>
+				<td class="centerTextTable">Algunos errores ortográficos, casi todas las imágenes son de baja resolución
+				</td>
+				<td class="centerTextTable">Pocos errores ortográficos, solo algunas imágenes son de baja resolución
+				</td>
 				<td class="centerTextTable">Pocos errores ortográficos, todas las imágenes son de buena resolución</td>
 			</tr>
 
@@ -176,15 +177,19 @@
 				<td class="centerTextTable">Solo describe las interfaces, sin mencionar requisito alguno</td>
 				<td class="centerTextTable">Solo para algunas de las interfaces explica cómo satisfacen los requisitos
 					funcionales</td>
-				<td class="centerTextTable">Para casi todas las interfaces, explica cómo satisfacen los requisitos funcionales
+				<td class="centerTextTable">Para casi todas las interfaces, explica cómo satisfacen los requisitos
+					funcionales
 				</td>
-				<td class="centerTextTable">Explica claramente como cada interfaz satisface los requisitos funcionales</td>
+				<td class="centerTextTable">Explica claramente como cada interfaz satisface los requisitos funcionales
+				</td>
 			</tr>
 
 			<tr>
 				<td class="centerTextTable">Organización de la información</td>
-				<td class="centerTextTable">No se entiende la presentación porque no hay secuencia lógica de información</td>
-				<td class="centerTextTable">Es difícil seguir la presentación, porque el presentador “salta” entre diapositivas
+				<td class="centerTextTable">No se entiende la presentación porque no hay secuencia lógica de información
+				</td>
+				<td class="centerTextTable">Es difícil seguir la presentación, porque el presentador “salta” entre
+					diapositivas
 				</td>
 				<td class="centerTextTable">La información está presentada en una secuencia lógica</td>
 				<td class="centerTextTable">La información es presentada en una forma lógica e interesante</td>
@@ -193,10 +198,13 @@
 			<tr>
 				<td class="centerTextTable">Forma </td>
 				<td class="centerTextTable">No se entiende lo que dice (en términos fonéticos y cinéticos) </td>
-				<td class="centerTextTable">Se entiende lo que dice la de manera parcial (su cuerpo no acompaña sus palabras)
+				<td class="centerTextTable">Se entiende lo que dice la de manera parcial (su cuerpo no acompaña sus
+					palabras)
 				</td>
-				<td class="centerTextTable">Se da a entender, presentando de manera eficiente y adecuado lenguaje corporal </td>
-				<td class="centerTextTable">Se da a entender siempre, destacando en su forma (pausas, dicción, contacto visual,
+				<td class="centerTextTable">Se da a entender, presentando de manera eficiente y adecuado lenguaje
+					corporal </td>
+				<td class="centerTextTable">Se da a entender siempre, destacando en su forma (pausas, dicción, contacto
+					visual,
 					gesticulación, otros)</td>
 			</tr>
 
