--- a/Main/HTML/Rubricas/EditarRubricaAdmin.html
+++ b/Main/HTML/Rubricas/EditarRubricaAdmin.html
@@ -18,81 +18,80 @@
 
 <body>
 
-	<div class="container">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
-			<a class="navbar-brand" href="../main.html">
-				fsociety
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="../main.html">Inicio</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Secciones
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
-							<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Alumnos
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../alumnos/AlumnosAdmin.html">Ver todos</a>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+		<a class="navbar-brand" href="../main.html">
+			fsociety
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="../main.html">Inicio</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Secciones
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
+						<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown active">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Alumnos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../alumnos/AlumnosAdmin.html">Ver todos</a>
 
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Grupos
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
-							<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Evaluadores
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
-							<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Rúbricas
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="./VerRubricaAdmin.html">Ver todas</a>
-							<a class="dropdown-item" href="./EditarRubricaAdmin.html">Administrar</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Grupos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
+						<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Evaluadores
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
+						<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Rúbricas
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="./VerRubricaAdmin.html">Ver todas</a>
+						<a class="dropdown-item" href="./EditarRubricaAdmin.html">Administrar</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
 
 	<br>
 
@@ -154,7 +153,8 @@
 			</tr>
 
 			<tr>
-				<td class="centerTextTable"><textarea class="form-control" rows="3" id="comment">Contenido</textarea></td>
+				<td class="centerTextTable"><textarea class="form-control" rows="3" id="comment">Contenido</textarea>
+				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
 						id="comment">No incluye las interfaces solicitadas</textarea></td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
@@ -166,17 +166,21 @@
 			</tr>
 
 			<tr>
-				<td class="centerTextTable"><textarea class="form-control" rows="3" id="comment">Calidad del material</textarea>
+				<td class="centerTextTable"><textarea class="form-control" rows="3"
+						id="comment">Calidad del material</textarea>
 				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
 						id="comment">Presentación con muchos errores ortográficos, todas las imágenes son de baja resolución</textarea>
 				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
-						id="comment">Algunos errores ortográficos, casi todas las imágenes son de baja resolución</textarea></td>
+						id="comment">Algunos errores ortográficos, casi todas las imágenes son de baja resolución</textarea>
+				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
-						id="comment">Pocos errores ortográficos, solo algunas imágenes son de baja resolución</textarea></td>
+						id="comment">Pocos errores ortográficos, solo algunas imágenes son de baja resolución</textarea>
+				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
-						id="comment">Pocos errores ortográficos, todas las imágenes son de buena resolución</textarea></td>
+						id="comment">Pocos errores ortográficos, todas las imágenes son de buena resolución</textarea>
+				</td>
 			</tr>
 
 			<tr>
@@ -191,14 +195,16 @@
 						id="comment">Para casi todas las interfaces, explica cómo satisfacen los requisitos funcionales</textarea>
 				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
-						id="comment">Explica claramente como cada interfaz satisface los requisitos funcionales</textarea></td>
+						id="comment">Explica claramente como cada interfaz satisface los requisitos funcionales</textarea>
+				</td>
 			</tr>
 
 			<tr>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
 						id="comment">Organización de la información</textarea></td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
-						id="comment">No se entiende la presentación porque no hay secuencia lógica de información</textarea></td>
+						id="comment">No se entiende la presentación porque no hay secuencia lógica de información</textarea>
+				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
 						id="comment">Es difícil seguir la presentación, porque el presentador “salta” entre diapositivas </textarea>
 				</td>
@@ -216,14 +222,16 @@
 						id="comment">Se entiende lo que dice la de manera parcial (su cuerpo no acompaña sus palabras) </textarea>
 				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
-						id="comment">Se da a entender, presentando de manera eficiente y adecuado lenguaje corporal </textarea></td>
+						id="comment">Se da a entender, presentando de manera eficiente y adecuado lenguaje corporal </textarea>
+				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
 						id="comment">Se da a entender siempre, destacando en su forma (pausas, dicción, contacto visual, gesticulación, otros)</textarea>
 				</td>
 			</tr>
 
 			<tr>
-				<td class="centerTextTable"><textarea class="form-control" rows="3" id="comment">Entusiasmo</textarea></td>
+				<td class="centerTextTable"><textarea class="form-control" rows="3" id="comment">Entusiasmo</textarea>
+				</td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
 						id="comment">No muestra interés en su entrega</textarea></td>
 				<td class="centerTextTable"><textarea class="form-control" rows="3"
