--- a/Main/HTML/Landingpage/landing-admin.html
+++ b/Main/HTML/Landingpage/landing-admin.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Estilos locales, Boostrap 4 -->
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./landingpage.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../../CSS/Landingpage/landingpage.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Íconos -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -21,8 +20,8 @@
 <body style="background:transparent;">
     <!-- Header y Navegation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img src="../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
-        <a class="navbar-brand" href="main.html">
+        <img src="../../IMG/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="./landing-admin.html">
             fsociety
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +30,7 @@
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="main.html">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./landing-admin.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -121,9 +120,9 @@
                                     <td>
                                         <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                             Ficha</button>
-                                        <button type="button" class="btn btn-success btn-sm"><i
-                                                class="fas fa-file-export"></i>
-                                            Exportar</button>
+                                        <button type="button" class="btn btn-warning btn-sm"><i
+                                            class="fas fa-hourglass-end"></i>
+                                        Evaluar</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -138,9 +137,9 @@
                                     <td>
                                         <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                             Ficha</button>
-                                        <button type="button" class="btn btn-success btn-sm"><i
-                                                class="fas fa-file-export"></i>
-                                            Exportar</button>
+                                        <button type="button" class="btn btn-warning btn-sm"><i
+                                            class="fas fa-hourglass-end"></i>
+                                        Evaluar</button>
                                     </td>
                                 </tr>
                                 <tr>
