Agregando Tiempo de Presentacion

--- a/Main/HTML/Resumen/ResumenAdministrador.html
+++ b/Main/HTML/Resumen/ResumenAdministrador.html
@@ -174,27 +174,32 @@
             <tr class="bg-primary text-white">
                 <th scope="col">Grupo 3</th>
                 <th scope="col">Nombre</th>
+                <th scope="col">Presentó</th>
             </tr>
         </thead>
         <tbody>   
             <tr>
                 <th scope="row">Integrante 1</th>
                 <td>Juan Lopez</td>
+                <td>Si</td>
             </tr>
 
             <tr>
                 <th scope="row">Integrante 2</th>
                 <td>Diego Silva</td>
+                <td>No</td>
             </tr>
 
             <tr>
                 <th scope="row">Integrante 3</th>
                 <td>Joaquin Jorquera</td>
+                <td>Si</td>
             </tr>
 
             <tr>
                 <th>Integrante 4</th>
                 <td>Catalina Gonzalez</td>
+                <td>No</td>
             </tr>
         </tbody> 
     </table>
