--- a/Main/HTML/Resumen/ResumenAlumnos.html
+++ b/Main/HTML/Resumen/ResumenAlumnos.html
@@ -44,9 +44,6 @@
     <div class="row justify-content-md-center" style="margin: auto">
         <div class="col-sm-10" style="padding: 1%;"></div>
     </div>
-    <div class="row justify-content-md-center" style="margin: auto">
-        <div class="col-sm-10" style="padding: 1%;"></div>
-    </div>
 
     <div class="container">
             <h1>Resumen de Evaluacion</h1>
@@ -124,7 +121,7 @@
             <tr class="bg-primary text-white">
                 <th scope="col">Grupo 3</th>
                 <th scope="col">Nombre</th>
-                <th scope="col">Presenta</th>
+                <th scope="col">Presentó</th>
             </tr>
         </thead>
         <tbody>
@@ -230,7 +227,14 @@
                 <td class="centerTextTable">Ocasionalmente habla en forma positiva</td>
                 <td class="centerTextTable">Habla en forma positiva durante casi toda la presentación</td>
             </tr>
-
+        </table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Tiempo de Presentacion:</th>
+                    <td>6:45</td>
+                </tr>
+            </thead>
         </table>
         <table class="table">
             <thead>
@@ -292,15 +296,6 @@
                 </tr>
             </tbody>
         </table>
-
-
-
-        <!-- Fila del total -->
-        <div class="row justify-content-md-center" style="margin: auto">
-            <div class="col-sm-10" style="padding: 1%;"></div>
-        </div>
-
-
         <table class="table">
             <thead>
                 <tr class="bg-primary text-white">
