Corregido algunos  errores  de requisitos y css

--- a/Main/HTML/Evaluar/evaluar_admin.html
+++ b/Main/HTML/Evaluar/evaluar_admin.html
@@ -224,6 +224,13 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                        <th>Nombre de la Evaluación:</th>
+                                        <td>Tarea 2</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning btn-sm">Editar</button>
+                                        </td>
+                                    </tr>
+                                <tr>
                                     <th>Fecha de Inicio:</th>
                                     <td>Lunes 8 de abril 13:00 hrs.</td>
                                     <td>
@@ -524,8 +531,8 @@
                     <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
                             <div class="table-responsive">          
                                       <table class="table">
-                                        <thead class="main_heading_table">
-                                          <tr>
+                                            <thead class="main_heading_table bg-primary text-white">
+                                                    <tr>
                                             <th></th>
                                             <th>Equipo</th>
                                             <th>Estado</th>
@@ -912,6 +919,8 @@
     <div style="padding:20px">
         <h1>Estado: Evaluando a Equipo "fsociety"  <button type="button" class="btn btn-success " style=""><i></i> Registrar Tiempo de Presentación</button>
         </h1>
+        <h4> Presione los nombres de los alumnos para evaluarlos.
+            </h4>
     </div>
 
     <div id="accordion">
