--- a/Main/HTML/Rubricas/CrearRubricaAdmin.html
+++ b/Main/HTML/Rubricas/CrearRubricaAdmin.html
@@ -22,7 +22,7 @@
 	<!-- AQUI COMIENZA LA TABLA PRINCIPAL QUE ALMACENARA LA INFORMACION DE LOS ALUMNOS -->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+		<img src="../../IMG/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
 		<a class="navbar-brand" href="../main.html">
 			fsociety
 		</a>
