--- a/Main/HTML/Rubricas/EliminarRubricaAdmin.html
+++ b/Main/HTML/Rubricas/EliminarRubricaAdmin.html
@@ -19,7 +19,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+		<img src="../../IMG/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
 		<a class="navbar-brand" href="../main.html">
 			fsociety
 		</a>
